--- a/src/enemies/Guard/style.scss
+++ b/src/enemies/Guard/style.scss
@@ -1,7 +1,7 @@
 .sprite.enemy.guard {
   height: 300px;
   width: 256px;
-  background: url(img/enemy/guard.png) left center;
+  background: url(./guard.png) left center;
   background-size: 4000px;
   background-position-x: -26px;
   &.default {
