--- a/src/items/MedkitItem/style.scss
+++ b/src/items/MedkitItem/style.scss
@@ -1,6 +1,6 @@
 .sprite.item {
   &.medkit {
-    background: url(img/items/medkit.png);
+    background: url(./medkit.png);
     background-size: 80px;
     background-position: 90px 60px;
   }
