--- a/src/items/PistolItem/style.scss
+++ b/src/items/PistolItem/style.scss
@@ -1,6 +1,6 @@
 .sprite.item {
   &.pistol {
-    background: url(img/items/pistol.png);
+    background: url(./pistol.png);
     background-size: 240px;
     background-position-y: 50px;
   }
