--- a/src/items/ShotgunItem/style.scss
+++ b/src/items/ShotgunItem/style.scss
@@ -1,6 +1,6 @@
 .sprite.item {
   &.shotgun {
-    background: url(img/items/shotgun.png);
+    background: url(./shotgun.png);
     background-size: 240px;
     background-position-y: 50px;
   }
