--- a/src/ui/components/Text/style.scss
+++ b/src/ui/components/Text/style.scss
@@ -7,7 +7,7 @@
     width: $default-size;
     height: $default-size;
 
-    background-image: url(img/hud/font.png);
+    background-image: url(./font.png);
     // background-color: white;
 
     filter: brightness(0.9);
