--- a/src/ui/screens/Game/HUD/WeaponBar/style.scss
+++ b/src/ui/screens/Game/HUD/WeaponBar/style.scss
@@ -20,10 +20,10 @@
     margin-right: 10px;
 
     &.shotgun {
-      background-image: url(img/items/shotgun.png);
+      background-image: url(../../../../../items/ShotgunItem/shotgun.png);
     }
     &.pistol {
-      background-image: url(img/items/pistol.png);
+      background-image: url(../../../../../items/PistolItem/pistol.png);
       position: relative;
       left: -38px;
     }
