--- a/src/ui/screens/Game/Weapon/weapon_styles/_pistol.scss
+++ b/src/ui/screens/Game/Weapon/weapon_styles/_pistol.scss
@@ -3,7 +3,7 @@
     height: 108px;
     width: 90px;
 
-    background: url(img/weapons/pistol.png);
+    background: url(./weapon_styles/pistol.png);
     background-repeat: no-repeat;
 
     transform: scale(4);
