--- a/src/ui/screens/Game/Weapon/weapon_styles/_shotgun.scss
+++ b/src/ui/screens/Game/Weapon/weapon_styles/_shotgun.scss
@@ -4,7 +4,7 @@
     height: 180px;
     width: 162px;
 
-    background: url(img/weapons/shotgun.png);
+    background: url(./weapon_styles/shotgun.png);
     background-repeat: no-repeat;
 
     bottom: 170px;
