--- a/src/ui/screens/Loading/style.scss
+++ b/src/ui/screens/Loading/style.scss
@@ -1,5 +1,5 @@
 .loading-screen {
-  background-image: url(img/splash.png);
+  background-image: url(./splash.png);
   background-size: cover;
   position: absolute;
 
