--- a/style/_level.scss
+++ b/style/_level.scss
@@ -26,7 +26,7 @@ h2 {
 
   background-size: 5px;
   background-repeat: repeat;
-  background-image: url(img/floor/1.jpg);
+  background-image: url(./1.jpg);
 
   transform-style: preserve-3d;
 
