--- a/style/index.scss
+++ b/style/index.scss
@@ -48,7 +48,7 @@ body {
   height: 100vh;
 
   overflow: hidden;
-  background: url(img/background.jpg);
+  background: url(./background.jpg);
   background-size: cover;
 
   user-select: none;
