--- a/src/prefabs/models/House/style.scss
+++ b/src/prefabs/models/House/style.scss
@@ -694,7 +694,7 @@
     background-color: #009051;
   }
   .roof_L .tp {
-    background: url(img/models/house/sidingTexture.jpg);
+    // background: url(img/models/house/sidingTexture.jpg);
   }
   .roof_L .bm {
     background-color: #565656;
@@ -734,7 +734,7 @@
     background-color: #009051;
   }
   .roof_L-1 .tp {
-    background: url(img/models/house/sidingTexture.jpg);
+    // background: url(img/models/house/sidingTexture.jpg);
   }
   .roof_L-1 .bm {
     background-color: #565656;
@@ -1023,10 +1023,10 @@
     background-color: #ffffff;
   }
   .back .ft {
-    background: url(img/models/house/Front.png);
+    // background: url(img/models/house/Front.png);
   }
   .back .bk {
-    background: url(img/models/house/Front.png);
+    // background: url(img/models/house/Front.png);
   }
   /* .front styles */
   .front {
@@ -1057,10 +1057,10 @@
     background-color: #ffffff;
   }
   .front .ft {
-    background: url(img/models/house/Front.png);
+    // background: url(img/models/house/Front.png);
   }
   .front .bk {
-    background: url(img/models/house/Front.png);
+    // background: url(img/models/house/Front.png);
   }
   /* .roofCurve_R_1 styles */
   .roofCurve_R_1 {
@@ -1097,7 +1097,7 @@
     background-color: #009051;
   }
   .roofCurve_R_1 .tp {
-    background: url(img/models/house/sidingTexture.jpg);
+    // background: url(img/models/house/sidingTexture.jpg);
   }
   .roofCurve_R_1 .bm {
     background-color: #565656;
@@ -1137,7 +1137,7 @@
     background-color: #009051;
   }
   .roofCurve_R-2 .tp {
-    background: url(img/models/house/sidingTexture.jpg);
+    // background: url(img/models/house/sidingTexture.jpg);
   }
   .roofCurve_R-2 .bm {
     background-color: #565656;
@@ -1171,7 +1171,7 @@
     height: 20.21em;
   }
   .right .face {
-    background: url(img/models/house/Side.png) #ffffff;
+    // background: url(img/models/house/Side.png) #ffffff;
   }
   /* .left styles */
   .left {
@@ -1199,7 +1199,7 @@
     height: 20.21em;
   }
   .left .face {
-    background: url(img/models/house/Side.png) #ffffff;
+    // background: url(img/models/house/Side.png) #ffffff;
   }
   /* .roofCurve_L_1 styles */
   .roofCurve_L_1 {
@@ -1236,7 +1236,7 @@
     background-color: #009051;
   }
   .roofCurve_L_1 .tp {
-    background: url(img/models/house/sidingTexture.jpg);
+    // background: url(img/models/house/sidingTexture.jpg);
   }
   .roofCurve_L_1 .bm {
     background-color: #565656;
@@ -1276,7 +1276,7 @@
     background-color: #009051;
   }
   .roofCurve_L-2 .tp {
-    background: url(img/models/house/sidingTexture.jpg);
+    // background: url(img/models/house/sidingTexture.jpg);
   }
   .roofCurve_L-2 .bm {
     background-color: #565656;
