--- a/src/ui/screens/Menu/style.scss
+++ b/src/ui/screens/Menu/style.scss
@@ -1,5 +1,5 @@
 .menu {
-  background-image: url(img/menu/background.png);
+  background-image: url(./background.png);
   background-size: cover;
 
   .navigation {
