image loading from webpack

--- a/src/ui/screens/Game/HUD/HealthBar/Face/style.scss
+++ b/src/ui/screens/Game/HUD/HealthBar/Face/style.scss
@@ -1,5 +1,5 @@
 .flynn {
-  // background-image: url("img/hud/face.png"); // TODO: preloading
+  background-image: url("./face.png");
   height: 64px;
   width: 48px;
   display: inline-block;
