loader for images (#46)
* image loading from webpack

* models folder

* skybox as level data

* updated default assets for Level

* Added surface

* update ui preload data

--- a/src/classes/Wall/style.scss
+++ b/src/classes/Wall/style.scss
@@ -6,7 +6,7 @@
     width: 100px;
     height: 100px;
 
-    background: url(img/walls/gray.png);
+    background: url(./textures/gray.png);
     $m: 5;
     background-size: (11px * $m) (44px * $m);
 
