Select Level screen updates

--- a/src/ui/screens/LevelSelect/style.scss
+++ b/src/ui/screens/LevelSelect/style.scss
@@ -1,13 +1,3 @@
-.menu {
-  background-image: url(../Menu/background.png);
-  background-size: cover;
-
-  .navigation {
-    width: 100%;
-    height: 100%;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+.level-select {
+  background-image: url(./level-select.jpg);
 }
