--- a/src/ui/components/Text/style.scss
+++ b/src/ui/components/Text/style.scss
@@ -27,6 +27,9 @@
     &.c {
       background-position: -159px 102px;
     }
+    &.d {
+      background-position: -211px 102px;
+    }
     &.e {
       background-position: -262px 102px;
     }
@@ -40,6 +43,9 @@
       background-position: -464px 102px;
 
       width: $default-size - 25;
+    }
+    &.j {
+      background-position: -489px 102px;
     }
     &.k {
       background-position: -541px 102px;
@@ -141,6 +147,10 @@
     &.dot {
       background-position: -576px 1534px;
       width: $default-size - 30;
+    }
+    &.exclamation_mark {
+      background-position: -109px 1534px;
+      width: $default-size - 25;
     }
   }
 }
