--- a/style/_utilities.scss
+++ b/style/_utilities.scss
@@ -1,14 +1,13 @@
-.mb-1 {
-  margin-bottom: 10px;
-}
-.mb-2 {
-  margin-bottom: 20px;
-}
+@for $i from 1 through 20 {
+  .mb-#{$i} {
+    margin-bottom: $i * 10px;
+  }
 
-.mb-3 {
-  margin-bottom: 30px;
-}
+  .ml-#{$i} {
+    margin-left: $i * 10px;
+  }
 
-.mb-4 {
-  margin-bottom: 40px;
+  .mr-#{$i} {
+    margin-right: $i * 10px;
+  }
 }
