--- a/src/ui/components/Text/style.scss
+++ b/src/ui/components/Text/style.scss
@@ -27,8 +27,14 @@
     &.c {
       background-position: -159px 102px;
     }
+    &.d {
+      background-position: -211px 102px;
+    }
     &.e {
       background-position: -262px 102px;
+    }
+    &.f {
+      background-position: -313px 102px;
     }
     &.g {
       background-position: -365px 102px;
@@ -40,6 +46,9 @@
       background-position: -464px 102px;
 
       width: $default-size - 25;
+    }
+    &.j {
+      background-position: -489px 102px;
     }
     &.k {
       background-position: -541px 102px;
@@ -141,6 +150,14 @@
     &.dot {
       background-position: -576px 1534px;
       width: $default-size - 30;
+    }
+    &.semicolon {
+      background-position: -518px 1534px;
+      width: $default-size - 30;
+    }
+    &.exclamation_mark {
+      background-position: -109px 1534px;
+      width: $default-size - 25;
     }
   }
 }
