--- a/src/classes/Wall/style.scss
+++ b/src/classes/Wall/style.scss
@@ -1,16 +1,15 @@
 .wall {
   transform-style: preserve-3d;
-
   .face {
     position: absolute;
     width: 100px;
     height: 100px;
 
-    background: url(./textures/gray.png);
-    $m: 5;
-    background-size: (11px * $m) (44px * $m);
-
     backface-visibility: hidden;
+  }
+
+  @mixin pseudo-shadow {
+    filter: brightness(0.5);
   }
 
   .front {
@@ -21,8 +20,90 @@
   }
   .back {
     transform: rotateY(180deg) translateZ(50px);
+    background-position-x: 51px;
+    @include pseudo-shadow;
   }
   .left {
     transform: rotateY(-90deg) translateZ(50px);
+    background-position-x: 51px;
+    @include pseudo-shadow;
+  }
+
+  &.default .face {
+    background-image: url(./textures/gray.png);
+    background-size: 55px 220px;
+  }
+
+  &.stone .face {
+    background-image: url(./textures/stone-1.png);
+    background-size: 50.3px 100px;
+  }
+  &.stone-old .face {
+    background-image: url(./textures/stone-6.jpg);
+    background-size: 50.3px 100px;
+  }
+  &.stone-face .face {
+    background-image: url(./textures/stone-2.jpg);
+    background-size: 100.5px 100px;
+  }
+  &.stone-nameplate .face {
+    background-image: url(./textures/stone-3.jpg);
+    background-size: 100.5px 100px;
+  }
+  &.stone-eagle .face {
+    background-image: url(./textures/stone-4.jpg);
+    background-size: 100.5px 100px;
+  }
+  &.stone-logo .face {
+    background-image: url(./textures/stone-5.jpg);
+    background-size: 100.5px 100px;
+  }
+
+  &.metal_1 .face {
+    background-image: url(./textures/metal-1.jpg);
+    background-size: 100.5px 100px;
+  }
+  &.metal_2 .face {
+    background-image: url(./textures/metal-2.jpg);
+    background-size: 100.5px 100px;
+  }
+
+  &.wood .face {
+    background-image: url(./textures/wood-1.jpg);
+    background-size: 50.3px 100px;
+  }
+  &.wood-eagle .face {
+    background-image: url(./textures/wood-2.jpg);
+    background-size: 100.5px 100px;
+  }
+  &.wood-face .face {
+    background-image: url(./textures/wood-3.jpg);
+    background-size: 100.5px 100px;
+  }
+  &.wood-logo .face {
+    background-image: url(./textures/wood-4.jpg);
+    background-size: 100.5px 100px;
+  }
+
+  &.brick .face {
+    background-image: url(./textures/brick-1.jpg);
+    background-size: 50.3px 100px;
+  }
+  &.brick-logo .face {
+    background-image: url(./textures/brick-2.jpg);
+    background-size: 100.5px 100px;
+  }
+
+  &.prison-wall .face {
+    background-image: url(./textures/prison-1.jpg);
+    background-size: 50.3px 100px;
+  }
+  &.prison-bars .face {
+    background-image: url(./textures/prison-2.jpg);
+    background-size: 100.5px 100px;
+  }
+  &.prison-nameplate .face {
+    background-image: url(./textures/prison-3.jpg);
+    background-size: 100.5px 100px;
   }
 }
