--- a/src/enemies/Guard/style.scss
+++ b/src/enemies/Guard/style.scss
@@ -1,4 +1,4 @@
-.sprite.enemy.guard {
+.sprite.enemy.guard .texture {
   height: 300px;
   width: 256px;
   background: url(./guard.png) left center;
