--- a/src/classes/Item/style.scss
+++ b/src/classes/Item/style.scss
@@ -1,8 +1,6 @@
 .sprites {
-  .sprite {
-    &.item {
-      height: 150px;
-      width: 250px;
-    }
+  .sprite.item {
+    height: 150px;
+    width: 250px;
   }
 }
