--- a/src/classes/Wall/style.scss
+++ b/src/classes/Wall/style.scss
@@ -11,7 +11,7 @@
   }
 
   @mixin pseudo-shadow {
-    background-color: rgba(0, 0, 0, 0.5);
+    // background-color: rgba(0, 0, 0, 0.5);
   }
 
   .front {
