--- a/src/items/MedkitItem/style.scss
+++ b/src/items/MedkitItem/style.scss
@@ -1,7 +1,5 @@
-.sprite.item {
-  &.medkit {
-    background: url(./medkit.png);
-    background-size: 80px;
-    background-position: 90px 60px;
-  }
+.sprite.item.medkit .texture {
+  background: url(./medkit.png);
+  background-size: 80px;
+  background-position: 90px 60px;
 }
