--- a/src/items/ShotgunItem/style.scss
+++ b/src/items/ShotgunItem/style.scss
@@ -1,7 +1,5 @@
-.sprite.item {
-  &.shotgun {
-    background: url(./shotgun.png);
-    background-size: 240px;
-    background-position-y: 50px;
-  }
+.sprite.item.shotgun .texture {
+  background: url(./shotgun.png);
+  background-size: 240px;
+  background-position-y: 50px;
 }
