--- a/src/items/PistolItem/style.scss
+++ b/src/items/PistolItem/style.scss
@@ -1,4 +1,4 @@
-.sprite.item.pistol .texture {
+.sprite.item.pistol .sprite-texture {
   background: url(./pistol.png);
   background-size: 240px;
   background-position-y: 50px;
