--- a/src/items/ShotgunItem/style.scss
+++ b/src/items/ShotgunItem/style.scss
@@ -1,4 +1,4 @@
-.sprite.item.shotgun .texture {
+.sprite.item.shotgun .sprite-texture {
   background: url(./shotgun.png);
   background-size: 240px;
   background-position-y: 50px;
