--- a/src/enemies/Guard/style.scss
+++ b/src/enemies/Guard/style.scss
@@ -1,8 +1,11 @@
-.sprite.enemy.guard {
+.guard {
   height: 300px;
   width: 256px;
 
-  .texture {
+  .sprite-texture {
+    height: 300px;
+    width: 256px;
+
     background: url(./guard.png) left center;
     background-size: 4000px;
     background-position-x: -26px;
