--- a/src/items/MedkitItem/style.scss
+++ b/src/items/MedkitItem/style.scss
@@ -1,4 +1,4 @@
-.sprite.item.medkit .texture {
+.sprite.item.medkit .sprite-texture {
   background: url(./medkit.png);
   background-size: 80px;
   background-position: 90px 60px;
