--- a/src/classes/Wall/style.scss
+++ b/src/classes/Wall/style.scss
@@ -6,10 +6,13 @@
     height: 100px;
 
     backface-visibility: hidden;
+    // background-blend-mode: darken;
   }
 
   @mixin pseudo-shadow {
-    filter: brightness(0.5);
+    // filter: brightness(0.5);
+    // background-color: rgba(0, 0, 0, 0.5);
+    // background-blend-mode: darken;
   }
 
   .front {
